cmake_minimum_required(VERSION  3.10)

project(LinkedlistsRoot)



add_subdirectory("modules/iLinkedList")
add_subdirectory("modules/Node")
add_subdirectory("samples/LinkedListSample")
add_subdirectory("samples/NodeTest")
add_subdirectory("samples/PointerSample")
add_subdirectory("samples/arrays")
add_subdirectory("samples/jagged_arrays")
add_subdirectory("samples/DoublyLinkedListSample")

